bin/testsuite/tests/compiler/src/errors/compiler1534.swg
#global testerror "Err0023"

//#[Swag.PrintBc]
#test
{
    var x = cast(rune) "A"
    @assert(x == "AA")
}
